# Localize-Kit

./: .gitignore  README.md  cursor-rules.md  cursor-suspensive-notes.txt  docker-compose.production.yml  package.json
.husky/: pre-push
backend/: .cursorrules  Dockerfile  package.json  pnpm-lock.yaml
backend-go/: .dockerignore  Dockerfile  MIGRATION_COMPARISON.md  Makefile  README.md  go.mod  go.sum  sqlc.yaml
backend-go/docs/: FINAL_COMPARISON.md  SWAGGER_COMPARISON_FINAL.md  docs.go  swagger.json  swagger.yaml  swagger_comparison.md  swagger_comparison_result.md  swagger_status.md
backend-go/sql/: schema.sql
backend/docs/: FRONTEND_AUTH_FLOW.md  TEAM_AUTH_STRATEGY.md
backend/scripts/: create-missing-personal-teams.sql
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/test/: app.e2e-spec.ts
design/: landing-page-layout.md  tokens.css
docs/: BUSINESS_LOGIC.md  MIGRATION_REVIEW.md  ROUTING_ARCHITECTURE.md  translation-editor-wireframe.md
frontend/: .env.development  .env.local  .env.production  Dockerfile  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
memory/: auth-system-analysis.md  backend-business-logic.md  database-schema.md  decisions.md  design-tokens.md  environment-setup.md  migration-reset-guide.md  mvp-launch-plan.md  project-context.md
parsing/: .gitignore  Cargo.toml  WASM_INTEGRATION.md  build.sh
parsing/src/: bench.rs  error.rs  export.rs  lang_codes.rs  lib.rs  transform.rs  types.rs
parsing/src/parser/: csv.rs  excel.rs  mod.rs
supabase/: config.toml
(+255 files in other folders)
