[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM 바인딩
wasm-bindgen = "0.2"

# CSV 파싱
csv = "1.3"

# Excel 파싱 (xlsx, xls)
calamine = "0.26"

# JSON/YAML 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JavaScript 타입 지원
js-sys = "0.3"

# 에러 처리
anyhow = "1.0"

# 정규식
regex = "1.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# WASM 최적화
opt-level = "s"
lto = true
