[package]
name = "parsing"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM 바인딩
wasm-bindgen = "0.2"

# CSV 파싱
csv = "1.3"

# Excel 파싱 (xlsx, xls)
calamine = { version = "0.32", default-features = false }

# JSON 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JavaScript 타입 지원
js-sys = "0.3"

# 에러 처리
anyhow = "1.0"

# 정규식 - lite 버전 사용
regex-lite = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# WASM 크기 최적화
opt-level = "z"          # 크기 최우선 최적화
lto = true               # 링크 타임 최적화
codegen-units = 1        # 단일 코드젠 유닛
panic = "abort"          # 패닉 시 즉시 종료 (unwind 코드 제거)
strip = "symbols"        # 심볼 제거
